fixed space alignment after opening space

--- a/client/sass/layout/_home.scss
+++ b/client/sass/layout/_home.scss
@@ -21,7 +21,7 @@ body {
             
             h1.headerSpaceName {
                 position: absolute;
-                top: $baseline/2.3333;
+                top: 4pt;
                 width: 33.333333vw;
                 left: 50vw;
                 margin-left: -16.6666667vw;
